--- a/src/app/Expense.form
+++ b/src/app/Expense.form
@@ -485,6 +485,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="New Category"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="newCategoryActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="newButton">
                   <Properties>
