--- a/src/app/Home.form
+++ b/src/app/Home.form
@@ -228,8 +228,8 @@
                                       </Group>
                                       <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                                           <Component id="jScrollPane3" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="chartJPanel" alignment="0" max="32767" attributes="0"/>
                                           <Component id="jPanel3" alignment="0" min="-2" pref="546" max="-2" attributes="0"/>
+                                          <Component id="chartJPanel" alignment="0" pref="546" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
