tambah type pada tabel Home

--- a/src/app/Home.form
+++ b/src/app/Home.form
@@ -229,7 +229,7 @@
                                       <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                                           <Component id="jScrollPane3" alignment="0" max="32767" attributes="0"/>
                                           <Component id="jPanel3" alignment="0" min="-2" pref="546" max="-2" attributes="0"/>
-                                          <Component id="chartJPanel" alignment="0" pref="546" max="32767" attributes="0"/>
+                                          <Component id="chartJPanel" alignment="0" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -356,8 +356,9 @@
                     <Component class="javax.swing.JTable" name="jTable1">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="4" rowCount="4">
+                          <Table columnCount="5" rowCount="4">
                             <Column editable="false" title="Date" type="java.lang.Object"/>
+                            <Column editable="false" title="Type" type="java.lang.Object"/>
                             <Column editable="false" title="Category" type="java.lang.Object"/>
                             <Column editable="false" title="Amount" type="java.lang.Object"/>
                             <Column editable="false" title="Note" type="java.lang.Object"/>
@@ -365,6 +366,11 @@
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                           <TableColumnModel selectionModel="0">
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
                             <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                               <Title/>
                               <Editor/>
